rerouted to Lists after login; fixed nav flicker on logout; fixed mobile list view scroll

--- a/public/Styles/main.css
+++ b/public/Styles/main.css
@@ -21,10 +21,6 @@ nav {
 	box-shadow: 0 5px 15px #5656561a;
 }
 
-.auth, .noAuth {
-	display: none;
-}
-
 nav a {
 	width: 100%;
 	height: 100%;
@@ -50,10 +46,6 @@ nav a:hover {
 .nav-currentPage {
 	background-color: #FFFFFF;
 	color: #41a3e1;
-}
-
-.auth {
-	display: none;
 }
 
 main {
@@ -131,8 +123,16 @@ button:hover {
 	cursor: pointer;
 }
 
+.buttonBox {
+	display: flex;
+	justify-content: space-around;
+	margin: 0 auto;
+	padding: 0;
+}
+
 .completeButton {
-	background-color: green;
+	margin: 0;
+	background-color: #499c73;
 	color: white;
 	padding: 10px;
 	border: none;
@@ -140,7 +140,8 @@ button:hover {
 }
 
 .cancelButton {
-	background-color: red;
+	margin: 0;
+	background-color: #d06464;
 	color: white;
 	padding: 10px;
 	border: none;
@@ -170,7 +171,12 @@ fieldset {
 	background-repeat: no-repeat;
 	background-position: left bottom;
 	text-align: center;
-	text-shadow: 0 0 20px #00000020;
+}
+
+.index-header-icon {
+	display: block;
+	margin-top: 70px;
+	font-size: 50px;
 }
 
 .subtitle {
@@ -470,18 +476,20 @@ li.place>p {
 	color: seagreen;
 	background-color: white;
 	font-size: 20px;
-	border: 1px solid seagreen;
 	border-radius: 3px;
+	border: 1px solid #4169e124;
+	border-left: 5px solid #2f8a5458;
+	box-shadow: -2px 2px 5px #4169e11c;
 }
 
-.addPlace {
+/*.addPlace {
 	display: block;
 	background-color: white;
 	border-radius: 3px;
 	border: 1px solid navy;
 	margin-left: 40px;
 	margin-bottom: 30px;
-}
+}*/
 
 .newListFieldset {
 	display: none;
@@ -510,6 +518,16 @@ li.newListPlace {
 	border: 1px solid #4169e124;
 	border-left: 5px solid #2f8a5458;
 	box-shadow: -2px 2px 5px #4169e11c;
+}
+
+.editAddPlace, .addPlace {
+	margin: 0 0 30px 0;
+	background: royalblue;
+	color: white;
+	border: none;
+	border-radius: 3px;
+	padding: 5px 10px;
+	box-shadow: 0 0 10px #88888888;
 }
 
 /*===================================================*/
@@ -685,6 +703,7 @@ li.editListPlace {
 
 .profile-countriesCount {
 	font-size: 14px;
+	text-decoration: underline;
 	width: fit-content;
 }
 
@@ -710,12 +729,15 @@ li.editListPlace {
 .profile-edit-icon {
 	position: absolute;
 	top: 55px;
-	right: 10px;
-	color: white;
+	right: 15px;
+	margin: 0;
+	font-size: 12px;
+	color: #FFFFFFC4;
+	transition: all .3s;
 }
 
 .profile-edit-icon:hover {
-	color: silver;
+	color: #FFFFFF;
 	cursor: pointer;
 }
 
@@ -816,6 +838,10 @@ footer a {
 	display: none;
 }
 
+.auth, .noAuth {
+	display: none;
+}
+
 @media only screen and (max-width: 640px) {
 	nav a {
 		font-size: 11px;
@@ -890,13 +916,11 @@ footer a {
 
 	.newListButton {
 		display: block;
-		position: absolute;
-		right: 20px;
 		width: 100px;
 		height: 45px;
-		font-size: 16px;
+		margin: 0 auto;
 		padding: 0;
-		margin: 0;
+		font-size: 16px;
 	}
 
 	.clearResults {
